Make filtered message receiver always returning a message